prefs: added chatgpt win dimensions option. related #14. fixes #8.

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -74,6 +74,21 @@
     "description": ""
   },
 
+  "prefs_OptionText_chatgpt_win_text": {
+    "message": "ChatGPT window dimensions",
+    "description": ""
+  },
+
+  "prefs_OptionText_chatgpt_win_height": {
+    "message": "Height",
+    "description": ""
+  },
+
+  "prefs_OptionText_chatgpt_win_width": {
+    "message": "Width",
+    "description": ""
+  },
+
   "prefsInfoTitle": {
     "message": "Important Information",
     "description": ""
