--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -74,6 +74,21 @@
     "description": ""
   },
 
+  "prefs_OptionText_chatgpt_win_text": {
+    "message": "Dimensioni della finestra di ChatGPT",
+    "description": ""
+  },
+
+  "prefs_OptionText_chatgpt_win_height": {
+    "message": "Altezza",
+    "description": ""
+  },
+
+  "prefs_OptionText_chatgpt_win_width": {
+    "message": "Larghezza",
+    "description": ""
+  },
+
   "prefsInfoTitle": {
     "message": "Informazioni Importanti",
     "description": ""
