Default signature name added. related to #14. Fixes #2.

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -94,6 +94,11 @@
     "description": ""
   },
 
+  "prefs_OptionText_default_sign_name": {
+    "message": "Default signature name",
+    "description": ""
+  },
+
   "prefsInfoTitle": {
     "message": "Important Information",
     "description": ""
