Default lang for chatgpt responses. related to #14

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -99,6 +99,11 @@
     "description": ""
   },
 
+  "prefs_OptionText_default_chatgpt_lang": {
+    "message": "Default language for ChatGPT responses",
+    "description": ""
+  },
+
   "prefsInfoTitle": {
     "message": "Important Information",
     "description": ""
