"Prompt this" added. Fixes #15

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -44,6 +44,11 @@
     "description": ""
   },
 
+  "prompt_this": {
+    "message": "Prompt this",
+    "description": ""
+  },
+
   "prompt_selection_needed": {
     "message": "To proceed, you need to select some text!",
     "description": ""
