it translation improved

--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -95,7 +95,7 @@
   },
 
   "prefs_OptionText_default_sign_name": {
-    "message": "Nome predefinito della firma",
+    "message": "Nome da utilizzare per la firma",
     "description": ""
   },
 
