typo fixed in the it translation

--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -115,7 +115,7 @@
   },
 
   "prefs_OptionText_reply_type": {
-    "message": "Modalità di riposta",
+    "message": "Modalità di risposta",
     "description": ""
   },
 
