it addon description fixed

--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -1,6 +1,6 @@
 {
   "extensionDescription": {
-    "message": "Apri un condiviso di un file di SharePoint o OneDrive direttamente con l'applicazione corretta, invece che il browser.",
+    "message": "Usa ChatGPT per migliorare le tue email!",
     "description": "Descrizione dell'estensione."
   },
 
