If the prompt is more than 30.000 characters, do not procede and give a warning. Fixes #26

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -79,6 +79,11 @@
     "description": ""
   },
 
+  "msg_prompt_too_long": {
+    "message": "The text you provided is too long. You need to reduce it to use ChatGPT.",
+    "description": ""
+  },
+
   "prefs_OptionText_release_notes": {
     "message": "Release Notes",
     "description": ""
