--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -84,6 +84,11 @@
     "description": ""
   },
 
+  "chatgpt_use_gpt35": {
+    "message": "Use GPT3.5",
+    "description": ""
+  },
+
   "msg_prompt_too_long": {
     "message": "The text you provided is too long. You need to reduce it to use ChatGPT.",
     "description": ""
