added link to the status page. fixes #28

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -99,6 +99,11 @@
     "description": ""
   },
 
+  "prefs_status_page": {
+    "message": "Service Status",
+    "description": ""
+  },
+
   "prefs_OptionText_chatgpt_win_text": {
     "message": "ChatGPT window dimensions",
     "description": ""
