service status is now lowercase

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -100,7 +100,7 @@
   },
 
   "prefs_status_page": {
-    "message": "Service Status",
+    "message": "service status",
     "description": ""
   },
 
