--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -100,7 +100,7 @@
   },
 
   "prefs_status_page": {
-    "message": "Stato del servizio",
+    "message": "stato del servizio",
     "description": ""
   },
 
