updated the "important information" message in the options page

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -160,12 +160,12 @@
   },
 
   "prefsInfoDesc_1": {
-    "message": "To prevent requests made through this extension from appearing in your ChatGPT chat history, you can disable them in the settings. This can be done directly in the ChatGPT settings within the window that appears when you use the extension. Remember, this option is valid only in this specific context and does not apply to other situations where you use ChatGPT.",
+    "message": "It is no longer possible to disable the history of ChatGPT chats. Therefore, there is no way to prevent requests made through this addon from appearing in your ChatGPT chat history.",
     "description": ""
   },
 
   "prefsInfoDesc_2": {
-    "message": " ",
+    "message": "If a white page appears when opening the ChatGPT window, it means there is a problem loading the ChatGPT page, not related to the use of this add-on.",
     "description": ""
   },
 
