added a btn to open the manage prompts tab

--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -164,6 +164,11 @@
     "description": ""
   },
 
+  "prefs_OptionText_btnManagePrompts": {
+    "message": "Gestisci i tuoi prompts",
+    "description": ""
+  },
+
   "prefsInfoTitle": {
     "message": "Informazioni Importanti",
     "description": ""
