--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -164,6 +164,11 @@
     "description": ""
   },
 
+  "prefs_OptionText_btnManagePrompts": {
+    "message": "Manage your prompts",
+    "description": ""
+  },
+
   "prefsInfoTitle": {
     "message": "Important Information",
     "description": ""
