en lang improved

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -54,8 +54,13 @@
     "description": ""
   },
 
-  "customPrompts_btnSave": {
+  "customPrompts_btnSaveAll": {
     "message": "Save All",
+    "description": ""
+  },
+
+  "customPrompts_save_button": {
+    "message": "Save",
     "description": ""
   },
 
