--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -254,6 +254,16 @@
     "description": ""
   },
 
+  "chatgpt_textarea_not_found_error": {
+    "message": "There is an error sending the prompt to ChatGPT, please retry. If the problem persists, please <a href=\"https://micz.it/thunderdbird-addon-thunderai/status/\">check the service status</a>.",
+    "description": ""
+  },
+
+  "chatgpt_sendbutton_not_found_error": {
+    "message": "You have to click the send button to send the prompt.",
+    "description": ""
+  },
+
   "chatgpt_user_not_logged_in": {
     "message": "You are not logged in to ChatGPT. Please log in with your credentials, close the ChatGPT window, and then repeat the action you attempted. You will remain logged in afterwards.",
     "description": ""
