--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -255,6 +255,14 @@
     "message": "Larghezza",
     "description": ""
   },
+  "chatgpt_textarea_not_found_error": {
+    "message": "C'è stato un errore nell'invio del prompt a ChatGPT, per favore riprova. Se il problema persiste, per favore <a href=\"https://micz.it/thunderdbird-addon-thunderai/status/\">controlla lo stato del servizio</a>.",
+    "description": ""
+  },
+  "chatgpt_sendbutton_not_found_error": {
+    "message": "Premi il pulsante per inviare il prompt a ChatGPT.",
+    "description": ""
+  },
   "prefs_OptionText_default_sign_name": {
     "message": "Nome da utilizzare per la firma",
     "description": ""
