--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -212,7 +212,7 @@
     "description": ""
   },
   "chatgpt_win_model_warning": {
-    "message": "Hai impostato l'opzione per utilizzare ChatGPT-4, ma sembra che non si stia caricando. Hai selezionato correttamente il modello in alto?",
+    "message": "Hai impostato l'opzione per utilizzare ChatGPT-4, ma sembra che non si stia caricando. Hai selezionato il modello 4 o 4o in alto?",
     "description": ""
   },
   "chatgpt_win_custom_text": {
