translate link added to the options page. fixes #68

--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -417,6 +417,15 @@
     "backToOptionsText": {
       "message": "Optionen",
       "description": ""
+    },
+    "TranslateText": {
+      "message": "Möchtest du helfen, dieses Add-on zu übersetzen?",
+      "description": ""
+    },
+  
+    "TranslateLink": {
+      "message": "Finde es heraus!",
+      "description": ""
     }
   }
   
