i18n en text for the import export buttons added. see #65

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -342,5 +342,13 @@
   "TranslateLink": {
     "message": "Find out how!",
     "description": ""
+  },
+  "customPrompts_ExportAll": {
+    "message": "Export all Prompts",
+    "description": ""
+  },
+  "customPrompts_Import": {
+    "message": "Import new Prompts",
+    "description": ""
   }
 }
