--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -55,6 +55,14 @@
     "message": "The default prompts are not editable. You can disable them, then copy the prompt text and paste it into a new one to create a modified version.",
     "description": ""
   },
+  "customPrompts_managePrompts_info_default_2": {
+    "message": "You can import and export the prompts. Existing prompts with the same ID will be overwritten. Prompts with new IDs will be added.",
+    "description": ""
+  },
+  "customPrompts_managePrompts_info_default_3": {
+    "message": "If everything is correct after the import, click on the 'Save All' button.",
+    "description": ""
+  },
   "customPrompts_start_saving": {
     "message": "Saving prompts...",
     "description": ""
@@ -352,7 +360,7 @@
     "description": ""
   },
   "importPrompts_confirmText": {
-    "message": "You are about to import new prompts. Existing prompts with the same ID will be overwritten. Prompts with new IDs will be added. If everything is correct after the import, click on the 'Save All' button.",
+    "message": "You are about to import new prompts.",
     "description": ""
   },
   "customPrompts_start_import": {
